--- a/cube/cube02.html
+++ b/cube/cube02.html
@@ -2,15 +2,15 @@
 <html lang="en"></html>
 <head>
   <meta charset="UTF-8">
-  <title>Threejs cube01 Sample</title>
+  <title>Threejs cube02 Sample</title>
 </head>
 <body>
-  <h1>キューブの描画</h1>
+  <h1>キューブのアニメーション</h1>
   <ul>
     <li><a href="../index.html">HOME</a></li>
     <li><a href="../cube/cube01.html">cube01</a></li>
     <li><a href="../cube/cube02.html">cube02</a></li>
   </ul>
   <script src="../common/threejs/build/three.min.js"></script>
-  <script src="./js/app01.js"></script>
+  <script src="./js/app02.js"></script>
 </body>
