--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <ul>
     <li><a href="./index.html">HOME</a></li>
     <li><a href="./cube/cube01.html">cube01</a></li>
+    <li><a href="./cube/cube02.html">cube02</a></li>
   </ul>
 </body>
