--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <li><a href="./index.html">HOME</a></li>
     <li><a href="./cube/cube01.html">cube01</a></li>
     <li><a href="./cube/cube02.html">cube02</a></li>
+    <li><a href="./line/line01.html">line01</a></li>
+    <li><a href="./demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
   </ul>
 </body>
