--- a/line/line01.html
+++ b/line/line01.html
@@ -2,10 +2,10 @@
 <html lang="en"></html>
 <head>
   <meta charset="UTF-8">
-  <title>Threejs cube01 Sample</title>
+  <title>Threejs line01 Sample</title>
 </head>
 <body>
-  <h1>キューブの描画</h1>
+  <h1>ラインの描画</h1>
   <ul>
     <li><a href="../index.html">HOME</a></li>
     <li><a href="../cube/cube01.html">cube01</a></li>
