line02 sample add.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <li><a href="./cube/cube01.html">cube01</a></li>
     <li><a href="./cube/cube02.html">cube02</a></li>
     <li><a href="./line/line01.html">line01</a></li>
+    <li><a href="./line/line02.html">line02</a></li>
     <li><a href="./demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
   </ul>
 </body>
