--- a/line/line02.html
+++ b/line/line02.html
@@ -2,10 +2,10 @@
 <html lang="en"></html>
 <head>
   <meta charset="UTF-8">
-  <title>Threejs cube02 Sample</title>
+  <title>Threejs line02 Sample</title>
 </head>
 <body>
-  <h1>キューブのアニメーション</h1>
+  <h1>複数ラインの描画</h1>
   <ul>
     <li><a href="../index.html">HOME</a></li>
     <li><a href="../cube/cube01.html">cube01</a></li>
