--- a/line/line02.html
+++ b/line/line02.html
@@ -13,6 +13,8 @@
     <li><a href="../line/line01.html">line01</a></li>
     <li><a href="../line/line02.html">line02</a></li>
     <li><a href="../line/line03.html">line03</a></li>
+    <li><a href="../circle/circle01.html">circle01</a></li>
+    <li><a href="../circle/circle02.html">circle02</a></li>
     <li><a href="../demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
   </ul>
   <script src="../common/threejs/build/three.min.js"></script>
