--- a/line/line03.html
+++ b/line/line03.html
@@ -13,6 +13,8 @@
     <li><a href="../line/line01.html">line01</a></li>
     <li><a href="../line/line02.html">line02</a></li>
     <li><a href="../line/line03.html">line03</a></li>
+    <li><a href="../circle/circle01.html">circle01</a></li>
+    <li><a href="../circle/circle02.html">circle02</a></li>
     <li><a href="../demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
   </ul>
   <script src="../common/threejs/build/three.min.js"></script>
@@ -48,11 +50,12 @@
     		 * シーンの作成
     		*/
     		scene = new THREE.Scene();
+    		scene.fog = new THREE.FogExp2(0x000000, 0.003);
     
     		/*
     		 * マテリアルの作成
     		*/
-    		var num = 500,
+    		var num = 400,
     				geometry = new THREE.BufferGeometry(),
     				material = new THREE.LineBasicMaterial({color: 0x0000ff}),
     				positions = new Float32Array(num * 3);
