--- a/line/line01.html
+++ b/line/line01.html
@@ -15,6 +15,7 @@
     <li><a href="../line/line03.html">line03</a></li>
     <li><a href="../circle/circle01.html">circle01</a></li>
     <li><a href="../circle/circle02.html">circle02</a></li>
+    <li><a href="../demo/circle2d-animation.html">DEMO: circle2d-animation</a></li>
     <li><a href="../demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
   </ul>
   <script src="../common/threejs/build/three.min.js"></script>
