Sample cude03 add.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <li><a href="./index.html">HOME</a></li>
     <li><a href="./cube/cube01.html">cube01</a></li>
     <li><a href="./cube/cube02.html">cube02</a></li>
+    <li><a href="./cube/cube03.html">cube03</a></li>
     <li><a href="./line/line01.html">line01</a></li>
     <li><a href="./line/line02.html">line02</a></li>
     <li><a href="./line/line03.html">line03</a></li>
