Helper sample add.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <li><a href="./line/line01.html">line01</a></li>
     <li><a href="./line/line02.html">line02</a></li>
     <li><a href="./line/line03.html">line03</a></li>
+    <li><a href="./line/line04.html">line04</a></li>
     <li><a href="./circle/circle01.html">circle01</a></li>
     <li><a href="./circle/circle02.html">circle02</a></li>
+    <li><a href="./helper/helper01.html">helper01</a></li>
     <li><a href="./demo/circle2d-animation.html">DEMO: circle2d-animation</a></li>
     <li><a href="./demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
   </ul>
