Sample file add.

--- a/cube/cube03.html
+++ b/cube/cube03.html
@@ -17,6 +17,11 @@
     <li><a href="../line/line04.html">line04</a></li>
     <li><a href="../circle/circle01.html">circle01</a></li>
     <li><a href="../circle/circle02.html">circle02</a></li>
+    <li><a href="../uniqe/uniqe01.html">uniqe01</a></li>
+    <li><a href="../uniqe/uniqe02.html">uniqe02</a></li>
+    <li><a href="../uniqe/uniqe03.html">uniqe03</a></li>
+    <li><a href="../other/other01.html">other01</a></li>
+    <li><a href="../other/other02.html">other02</a></li>
     <li><a href="../helper/helper01.html">helper01</a></li>
     <li><a href="../demo/circle2d-animation.html">DEMO: circle2d-animation</a></li>
     <li><a href="../demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
