--- a/other/other01.html
+++ b/other/other01.html
@@ -2,10 +2,10 @@
 <html lang="en"></html>
 <head>
   <meta charset="UTF-8">
-  <title>Threejs cube01 Sample</title>
+  <title>Threejs Other Objuct Plane Sample</title>
 </head>
 <body>
-  <h1>円柱の描画</h1>
+  <h1>平面の描画</h1>
   <ul>
     <li><a href="../index.html">HOME</a></li>
     <li><a href="../cube/cube01.html">cube01</a></li>
@@ -34,19 +34,19 @@
     scene = "";
     renderer = "";
     init = function() {
-
-      /*
-      		 * カメラの設定
-       */
-      var aspect, axis, cylinder, fav, fov, geometry, height, material, near, width;
+      var aspect, axis, fav, fov, geometry, height, material, near, plane, width;
       width = window.innerWidth;
       height = window.innerHeight;
       fov = 45;
       aspect = width / height;
       near = 1;
       fav = 1000;
+
+      /*
+      		 * カメラの設定
+       */
       camera = new THREE.PerspectiveCamera(fov, aspect, near, fav);
-      camera.position.set(50, 50, 150);
+      camera.position.set(50, 50, 200);
       camera.up.set(0, 0, 1);
       camera.lookAt({
         x: 0,
@@ -60,22 +60,21 @@
       scene = new THREE.Scene;
 
       /*
-      		 * 軸ヘルパー
+      		 * 軸ヘルパーの作成
        */
-      axis = new THREE.AxisHelper(100);
+      axis = new THREE.AxisHelper(150);
       axis.position.set(0, 0, 0);
       scene.add(axis);
 
       /*
       		 * メッシュの作成
        */
-      geometry = new THREE.CylinderGeometry(40, 40, 80, 50, 50, true);
+      geometry = new THREE.PlaneGeometry(100, 100, 10, 10);
       material = new THREE.MeshNormalMaterial({
-        shading: THREE.SmoothShading,
-        side: THREE.DoubleSide
+        wireframe: true
       });
-      cylinder = new THREE.Mesh(geometry, material);
-      scene.add(cylinder);
+      plane = new THREE.Mesh(geometry, material);
+      scene.add(plane);
 
       /*
       		 * レンダラーの作成
