--- a/uniqe/uniqe01.html
+++ b/uniqe/uniqe01.html
@@ -2,10 +2,10 @@
 <html lang="en"></html>
 <head>
   <meta charset="UTF-8">
-  <title>Threejs cube01 Sample</title>
+  <title>Threejs Uniqe Sample</title>
 </head>
 <body>
-  <h1>円柱の描画</h1>
+  <h1>凸型オブジェクト</h1>
   <ul>
     <li><a href="../index.html">HOME</a></li>
     <li><a href="../cube/cube01.html">cube01</a></li>
@@ -27,6 +27,7 @@
     <li><a href="../demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
   </ul>
   <script src="../common/threejs/build/three.min.js"></script>
+  <script src="../common/lib/ConvexGeometry.js"></script>
   <script>(function() {
   window.addEventListener("DOMContentLoaded", function() {
     var camera, init, renderer, scene;
@@ -38,7 +39,7 @@
       /*
       		 * カメラの設定
        */
-      var aspect, axis, cylinder, fav, fov, geometry, height, material, near, width;
+      var aspect, axis, convex, fav, fov, geometry, height, i, j, material, near, vertices, width;
       width = window.innerWidth;
       height = window.innerHeight;
       fov = 45;
@@ -46,7 +47,7 @@
       near = 1;
       fav = 1000;
       camera = new THREE.PerspectiveCamera(fov, aspect, near, fav);
-      camera.position.set(50, 50, 150);
+      camera.position.set(50, 50, 200);
       camera.up.set(0, 0, 1);
       camera.lookAt({
         x: 0,
@@ -60,22 +61,33 @@
       scene = new THREE.Scene;
 
       /*
-      		 * 軸ヘルパー
+      		 * 軸ヘルパ
        */
-      axis = new THREE.AxisHelper(100);
+      axis = new THREE.AxisHelper(300);
       axis.position.set(0, 0, 0);
       scene.add(axis);
 
       /*
       		 * メッシュの作成
        */
-      geometry = new THREE.CylinderGeometry(40, 40, 80, 50, 50, true);
-      material = new THREE.MeshNormalMaterial({
-        shading: THREE.SmoothShading,
-        side: THREE.DoubleSide
-      });
-      cylinder = new THREE.Mesh(geometry, material);
-      scene.add(cylinder);
+
+      /*
+      		vertices = [
+      			new THREE.Vector3 -50, -50, 0
+      			new THREE.Vector3 -50, 50, 0
+      			new THREE.Vector3 50, 50, 0
+      			new THREE.Vector3 50, -50, 0
+      			new THREE.Vector3 0, 0, 60
+      		]
+       */
+      vertices = [];
+      for (i = j = 0; j <= 5; i = ++j) {
+        vertices[i] = new THREE.Vector3(100 * Math.random() - 20, 100 * Math.random() - 20, 100 * Math.random() - 20);
+      }
+      geometry = new THREE.ConvexGeometry(vertices);
+      material = new THREE.MeshNormalMaterial;
+      convex = new THREE.Mesh(geometry, material);
+      scene.add(convex);
 
       /*
       		 * レンダラーの作成
