--- a/demos/index.html
+++ b/demos/index.html
@@ -27,6 +27,7 @@
       <li><a href="./uniqe/uniqe02.html">uniqe02</a></li>
       <li><a href="./uniqe/uniqe03.html">uniqe03</a></li>
       <li><a href="./physics/physics01.html">physics01</a></li>
+      <li><a href="./physics/physics02.html">physics02</a></li>
       <li><a href="./other/other01.html">other01</a></li>
       <li><a href="./other/other02.html">other02</a></li>
       <li><a href="./helper/helper01.html">helper01</a></li>
