--- a/demos/uniqe/uniqe01.html
+++ b/demos/uniqe/uniqe01.html
@@ -27,6 +27,7 @@
       <li><a href="./uniqe/uniqe02.html">uniqe02</a></li>
       <li><a href="./uniqe/uniqe03.html">uniqe03</a></li>
       <li><a href="./physics/physics01.html">physics01</a></li>
+      <li><a href="./physics/physics02.html">physics02</a></li>
       <li><a href="./other/other01.html">other01</a></li>
       <li><a href="./other/other02.html">other02</a></li>
       <li><a href="./helper/helper01.html">helper01</a></li>
@@ -54,6 +55,7 @@
         <li><a href="../uniqe/uniqe02.html">uniqe02</a></li>
         <li><a href="../uniqe/uniqe03.html">uniqe03</a></li>
         <li><a href="../physics/physics01.html">physics01</a></li>
+        <li><a href="../physics/physics02.html">physics02</a></li>
         <li><a href="../other/other01.html">other01</a></li>
         <li><a href="../other/other02.html">other02</a></li>
         <li><a href="../helper/helper01.html">helper01</a></li>
@@ -80,7 +82,7 @@
       		 * カメラの設定
        */
       var aspect, axis, convex, fav, fov, geometry, height, i, j, material, near, vertices, width;
-      width = window.innerWidth;
+      width = document.body.clientWidth;
       height = window.innerHeight;
       fov = 45;
       aspect = width / height;
