--- a/demos/helper/helper01.html
+++ b/demos/helper/helper01.html
@@ -27,6 +27,7 @@
       <li><a href="./uniqe/uniqe02.html">uniqe02</a></li>
       <li><a href="./uniqe/uniqe03.html">uniqe03</a></li>
       <li><a href="./physics/physics01.html">physics01</a></li>
+      <li><a href="./physics/physics02.html">physics02</a></li>
       <li><a href="./other/other01.html">other01</a></li>
       <li><a href="./other/other02.html">other02</a></li>
       <li><a href="./helper/helper01.html">helper01</a></li>
@@ -54,6 +55,7 @@
         <li><a href="../uniqe/uniqe02.html">uniqe02</a></li>
         <li><a href="../uniqe/uniqe03.html">uniqe03</a></li>
         <li><a href="../physics/physics01.html">physics01</a></li>
+        <li><a href="../physics/physics02.html">physics02</a></li>
         <li><a href="../other/other01.html">other01</a></li>
         <li><a href="../other/other02.html">other02</a></li>
         <li><a href="../helper/helper01.html">helper01</a></li>
@@ -88,7 +90,7 @@
       		 * THREE.PerspectiveCamera(画角, 縦横比, クリッピング手前, クリッピング奥);
        */
       var aspect, axis, fav, fov, height, near, width;
-      width = window.innerWidth;
+      width = document.body.clientWidth;
       height = window.innerHeight;
       fov = 45;
       aspect = width / height;
