--- a/demos/physics/physics01.html
+++ b/demos/physics/physics01.html
@@ -27,6 +27,7 @@
       <li><a href="./uniqe/uniqe02.html">uniqe02</a></li>
       <li><a href="./uniqe/uniqe03.html">uniqe03</a></li>
       <li><a href="./physics/physics01.html">physics01</a></li>
+      <li><a href="./physics/physics02.html">physics02</a></li>
       <li><a href="./other/other01.html">other01</a></li>
       <li><a href="./other/other02.html">other02</a></li>
       <li><a href="./helper/helper01.html">helper01</a></li>
@@ -54,13 +55,25 @@
         <li><a href="../uniqe/uniqe02.html">uniqe02</a></li>
         <li><a href="../uniqe/uniqe03.html">uniqe03</a></li>
         <li><a href="../physics/physics01.html">physics01</a></li>
+        <li><a href="../physics/physics02.html">physics02</a></li>
         <li><a href="../other/other01.html">other01</a></li>
         <li><a href="../other/other02.html">other02</a></li>
         <li><a href="../helper/helper01.html">helper01</a></li>
         <li><a href="../demo/circle2d-animation.html">DEMO: circle2d-animation</a></li>
         <li><a href="../demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
       </ul>
-    </div>
+    </div><h2 id="-sample">使い方 Sample</h2>
+<h3 id="-">初期設定</h3>
+<h4 id="cannon-js-">CANNON.jsの世界を生成</h4>
+<pre><code>world = new CANNON.World();
+</code></pre><h4 id="-">重力の設定</h4>
+<pre><code>world.gravity.set(0,0,0);// 重力
+world.broadphase = new CANNON.NaiveBroadphase();// 衝突している可能性のある剛体を見つける
+world.solver.iterations = 10;// 反復計算回数
+</code></pre><blockquote>
+<p><strong>剛体</strong><br>剛体はどんな力を受けても形や体積を変えない。剛体の運動は，重心に全質量が集中した仮想的質点が行う重心運動と，重心のまわりの回転運動とに分離して論じることができる。<br><a href="https://kotobank.jp/word/%E5%89%9B%E4%BD%93-62662">コトバンク &gt; 剛体とは</a></p>
+</blockquote>
+
     <script src="../src/three.min.js"></script>
     <script src="../src/ConvexGeometry.js"></script>
     <script src="../src/CanvasRenderer.js"></script>
@@ -75,15 +88,14 @@
       initCannon();
       animate();
       function initCannon() {
-          // ワールドの設定
+          // CANNON.jsの世界を生成
           world = new CANNON.World();
       
-          // 重力の設定
-          world.gravity.set(0,0,0);
-          world.broadphase = new CANNON.NaiveBroadphase();
-          world.solver.iterations = 10;
+          world.gravity.set(0,0,0);// 重力の設定
+          world.broadphase = new CANNON.NaiveBroadphase();// 衝突している可能性のある物体を見つける
+          world.solver.iterations = 10;// 反復計算回数
       
-          // オブジェクトの生成
+          // 対象となる剛体の生成
           shape = new CANNON.Box(new CANNON.Vec3(1,1,1));
           mass = 1;
           body = new CANNON.Body({
@@ -96,7 +108,7 @@
       }
       function initThree() {
           scene = new THREE.Scene();
-          camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 100 );
+          camera = new THREE.PerspectiveCamera( 75, document.body.clientWidth / window.innerHeight, 1, 100 );
           camera.position.z = 5;
           scene.add( camera );
           geometry = new THREE.BoxGeometry( 1, 1, 1 );
@@ -104,7 +116,7 @@
           mesh = new THREE.Mesh( geometry, material );
           scene.add( mesh );
           renderer = new THREE.WebGLRenderer();
-          renderer.setSize( window.innerWidth, window.innerHeight );
+          renderer.setSize( document.body.clientWidth, window.innerHeight );
           document.body.appendChild( renderer.domElement );
       }
       function animate() {
