Plane Sample add.

--- a/demos/index.html
+++ b/demos/index.html
@@ -22,6 +22,8 @@
       <li><a href="./line/line04.html">line04</a></li>
       <li><a href="./circle/circle01.html">circle01</a></li>
       <li><a href="./circle/circle02.html">circle02</a></li>
+      <li><a href="./plane/plane01.html">plane01</a></li>
+      <li><a href="./plane/plane02.html">plane02</a></li>
       <li><a href="./particle/particle01.html">particle01</a></li>
       <li><a href="./uniqe/uniqe01.html">uniqe01</a></li>
       <li><a href="./uniqe/uniqe02.html">uniqe02</a></li>
