All Files adjustment.

--- a/demos/demo/buffer-geometry.html
+++ b/demos/demo/buffer-geometry.html
@@ -1,43 +1,15 @@
 <!DOCTYPE html>
-<html lang="en"></html>
-<head>
-  <meta charset="UTF-8">
-  <title>Threejs buffer-geometry Sample</title>
-  <link rel="stylesheet" href="../css/marx.min.css">
-  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="../css/style.css">
-</head>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <title>Threejs buffer-geometry Sample</title>
+    <link rel="stylesheet" href="../css/marx.min.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+  </head>
+</html>
 <body>
   <div class="menu-bg"></div>
-  <div class="nav">
-    <div class="menu-icon"></div>
-    <ul>
-      <li><a href="./index.html">HOME</a></li>
-      <li><a href="./cube/cube01.html">cube01</a></li>
-      <li><a href="./cube/cube02.html">cube02</a></li>
-      <li><a href="./cube/cube03.html">cube03</a></li>
-      <li><a href="./line/line01.html">line01</a></li>
-      <li><a href="./line/line02.html">line02</a></li>
-      <li><a href="./line/line03.html">line03</a></li>
-      <li><a href="./line/line04.html">line04</a></li>
-      <li><a href="./circle/circle01.html">circle01</a></li>
-      <li><a href="./circle/circle02.html">circle02</a></li>
-      <li><a href="./plane/plane01.html">plane01</a></li>
-      <li><a href="./plane/plane02.html">plane02</a></li>
-      <li><a href="./plane/plane03.html">plane03</a></li>
-      <li><a href="./particle/particle01.html">particle01</a></li>
-      <li><a href="./uniqe/uniqe01.html">uniqe01</a></li>
-      <li><a href="./uniqe/uniqe02.html">uniqe02</a></li>
-      <li><a href="./uniqe/uniqe03.html">uniqe03</a></li>
-      <li><a href="./physics/physics01.html">physics01</a></li>
-      <li><a href="./physics/physics02.html">physics02</a></li>
-      <li><a href="./other/other01.html">other01</a></li>
-      <li><a href="./other/other02.html">other02</a></li>
-      <li><a href="./helper/helper01.html">helper01</a></li>
-      <li><a href="./demo/circle2d-animation.html">DEMO: circle2d-animation</a></li>
-      <li><a href="./demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
-    </ul>
-  </div>
   <div class="l-wrapper">
     <h1>buffer-geometry サンプル</h1>
     <div class="nav">
