--- a/demos/index.html
+++ b/demos/index.html
@@ -1,44 +1,98 @@
 <!DOCTYPE html>
-<html lang="en"></html>
-<head>
-  <meta charset="UTF-8">
-  <title>Sample Threejs</title>
-  <link rel="stylesheet" href="../css/marx.min.css">
-  <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="../css/style.css">
-</head>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8">
+    <title>Threejs cube01 Sample</title>
+    <link rel="stylesheet" href="./css/marx.min.css">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
+</html>
 <body>
   <div class="menu-bg"></div>
-  <div class="nav">
-    <div class="menu-icon"></div>
-    <ul>
-      <li><a href="./index.html">HOME</a></li>
-      <li><a href="./cube/cube01.html">cube01</a></li>
-      <li><a href="./cube/cube02.html">cube02</a></li>
-      <li><a href="./cube/cube03.html">cube03</a></li>
-      <li><a href="./line/line01.html">line01</a></li>
-      <li><a href="./line/line02.html">line02</a></li>
-      <li><a href="./line/line03.html">line03</a></li>
-      <li><a href="./line/line04.html">line04</a></li>
-      <li><a href="./circle/circle01.html">circle01</a></li>
-      <li><a href="./circle/circle02.html">circle02</a></li>
-      <li><a href="./plane/plane01.html">plane01</a></li>
-      <li><a href="./plane/plane02.html">plane02</a></li>
-      <li><a href="./plane/plane03.html">plane03</a></li>
-      <li><a href="./particle/particle01.html">particle01</a></li>
-      <li><a href="./uniqe/uniqe01.html">uniqe01</a></li>
-      <li><a href="./uniqe/uniqe02.html">uniqe02</a></li>
-      <li><a href="./uniqe/uniqe03.html">uniqe03</a></li>
-      <li><a href="./physics/physics01.html">physics01</a></li>
-      <li><a href="./physics/physics02.html">physics02</a></li>
-      <li><a href="./other/other01.html">other01</a></li>
-      <li><a href="./other/other02.html">other02</a></li>
-      <li><a href="./helper/helper01.html">helper01</a></li>
-      <li><a href="./demo/circle2d-animation.html">DEMO: circle2d-animation</a></li>
-      <li><a href="./demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
-    </ul>
-  </div>
   <div class="l-wrapper">
     <h1>Threejs</h1>
+    <div class="nav">
+      <div class="menu-icon"></div>
+      <ul>
+        <li><a href="./index.html">HOME</a></li>
+        <li><a href="./cube/cube01.html">cube01</a></li>
+        <li><a href="./cube/cube02.html">cube02</a></li>
+        <li><a href="./cube/cube03.html">cube03</a></li>
+        <li><a href="./line/line01.html">line01</a></li>
+        <li><a href="./line/line02.html">line02</a></li>
+        <li><a href="./line/line03.html">line03</a></li>
+        <li><a href="./line/line04.html">line04</a></li>
+        <li><a href="./circle/circle01.html">circle01</a></li>
+        <li><a href="./circle/circle02.html">circle02</a></li>
+        <li><a href="./plane/plane01.html">plane01</a></li>
+        <li><a href="./plane/plane02.html">plane02</a></li>
+        <li><a href="./plane/plane03.html">plane03</a></li>
+        <li><a href="./particle/particle01.html">particle01</a></li>
+        <li><a href="./uniqe/uniqe01.html">uniqe01</a></li>
+        <li><a href="./uniqe/uniqe02.html">uniqe02</a></li>
+        <li><a href="./uniqe/uniqe03.html">uniqe03</a></li>
+        <li><a href="./physics/physics01.html">physics01</a></li>
+        <li><a href="./physics/physics02.html">physics02</a></li>
+        <li><a href="./other/other01.html">other01</a></li>
+        <li><a href="./other/other02.html">other02</a></li>
+        <li><a href="./helper/helper01.html">helper01</a></li>
+        <li><a href="./demo/circle2d-animation.html">DEMO: circle2d-animation</a></li>
+        <li><a href="./demo/buffer-geometry.html">DEMO: buffer-geometry</a></li>
+      </ul>
+    </div><h2 id="-">基本的な使い方</h2>
+<h3 id="-">読み込み後に実行</h3>
+<pre><code>window.addEventListener(&quot;DOMContentLoaded&quot;, function(){
+    処理
+});
+</code></pre><hr>
+<h3 id="-">カメラの設定</h3>
+<pre><code>/* カメラを用意
+ * THREE.PerspectiveCamera(画角, 縦横比, クリッピング手前, クリッピング奥);
+ * クリッピング手前からクリッピング奥までが描画される
+*/
+var width  = document.body.clientWidth,
+        height = window.innerHeight,
+        fov    = 45,
+        aspect = width / height,
+        near   = 1,
+        far    = 1000,
+        camera = new THREE.PerspectiveCamera(fov, aspect, near, far);
+
+camera.position.set(50, 50, 200);// カメラの位置座標
+camera.up.set(0, 0, 1);// カメラの上方向の設定
+camera.lookAt({x: 0, y: 0, z: 0});// カメラの視野の中心
+</code></pre><h4 id="three-perspectivecamera-">THREE.PerspectiveCamera(画角, 縦横比, クリッピング手前, クリッピング奥);</h4>
+<p><a href="http://threejs.org/docs/#Reference/Cameras/PerspectiveCamera">docs - PerspectiveCamera</a>  </p>
+<table>
+<thead>
+<tr>
+<th style="text-align:left">カメラ</th>
+<th style="text-align:left">意味</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:left">camera.position</td>
+<td style="text-align:left">カメラの位置座標</td>
+</tr>
+<tr>
+<td style="text-align:left">camera.up</td>
+<td style="text-align:left">カメラの上方向の設定</td>
+</tr>
+<tr>
+<td style="text-align:left">camera.lookAt</td>
+<td style="text-align:left">カメラの視野の中心</td>
+</tr>
+</tbody>
+</table>
+
+    <script src="./src/three.min.js"></script>
+    <script src="./src/ConvexGeometry.js"></script>
+    <script src="./src/CanvasRenderer.js"></script>
+    <script src="./src/Projector.js"></script>
+    <script src="./src/cannon.min.js"></script>
+    <script src="./src/jquery.min.js"></script>
+    <script src="./src/common.js"></script>
   </div>
 </body>
