--- a/demos/line/line02.html
+++ b/demos/line/line02.html
@@ -28,6 +28,7 @@
         <li><a href="../plane/plane01.html">plane01</a></li>
         <li><a href="../plane/plane02.html">plane02</a></li>
         <li><a href="../plane/plane03.html">plane03</a></li>
+        <li><a href="../plane/plane04.html">plane04</a></li>
         <li><a href="../particle/particle01.html">particle01</a></li>
         <li><a href="../uniqe/uniqe01.html">uniqe01</a></li>
         <li><a href="../uniqe/uniqe02.html">uniqe02</a></li>
