--- a/demos/index.html
+++ b/demos/index.html
@@ -19,6 +19,7 @@
         <li><a href="./cube/cube01.html">cube01</a></li>
         <li><a href="./cube/cube02.html">cube02</a></li>
         <li><a href="./cube/cube03.html">cube03</a></li>
+        <li><a href="./cube/cube04.html">cube04</a></li>
         <li><a href="./line/line01.html">line01</a></li>
         <li><a href="./line/line02.html">line02</a></li>
         <li><a href="./line/line03.html">line03</a></li>
@@ -29,6 +30,8 @@
         <li><a href="./plane/plane02.html">plane02</a></li>
         <li><a href="./plane/plane03.html">plane03</a></li>
         <li><a href="./plane/plane04.html">plane04</a></li>
+        <li><a href="./plane/plane04_2.html">plane04_2</a></li>
+        <li><a href="./plane/plane04_3.html">plane04_3</a></li>
         <li><a href="./particle/particle01.html">particle01</a></li>
         <li><a href="./uniqe/uniqe01.html">uniqe01</a></li>
         <li><a href="./uniqe/uniqe02.html">uniqe02</a></li>
